# contextvault

./: .env.example  .gitignore  ANSWER_TO_YOUR_QUESTION.md  ARCHITECTURE_COMPARISON.md  CLAUDE.md  CLAUDE_TRANSFORMATION_PROMPT.md  CLEANUP_AND_TESTING_SUMMARY.md  CLI_STATUS_REPORT.md  COMPLETE_USAGE_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  CONSUMER_FRIENDLY_UPDATE.md  DEMO_VIDEO_SCRIPT.md  FINAL_ARCHITECTURE_ANALYSIS.md  FIXES_APPLIED.md  GITHUB_SETUP.md  GRAPH_RAG_INTEGRATION.md  HOW_TO_USE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_COMPLETE.md  INTEGRATION_PROMPT.md  LICENSE  MEM0_UPGRADE_COMPLETE.md  MULTI_AGENT_SYSTEM_DESIGN.md  NATURAL_LANGUAGE_COMMANDS.md  PRODUCTION_READY.md  QUICKSTART.md  QUICK_DEMO_COMMANDS.md  QUICK_START_GUIDE.md  README.md  READ_ME_FIRST.md  REALITY_CHECK.md  REDDIT_POST_DRAFT.md  SYSTEM_TEST_RESULTS.md  TESTING_COMPLETE.md  TESTING_SUMMARY.md  TRANSFORMATION_ROADMAP.md  UPGRADE_COMPLETE.md  USER_GUIDE.md  VISUAL_COMPARISON.md  (+11 more)
alembic/: env.py
alembic/versions/: 08b11f3f5013_add_extended_thinking_tables.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  context.py  permissions.py  templates.py
contextvault/: __init__.py  config.py  database.py  main.py
contextvault/api/: __init__.py  context.py  graph_rag.py  health.py  mcp.py  mem0_api.py  permissions.py  routing.py  thinking.py
contextvault/cli/: __main__.py  main.py
contextvault/cognitive/: __init__.py  workspace.py
contextvault/dashboard/: app.py
contextvault/integrations/: __init__.py  base.py  ollama.py
contextvault/models/: __init__.py  context.py  mcp.py  permissions.py  routing.py  sessions.py  thinking.py
contextvault/routing/: __init__.py  model_profiles.py  model_router.py  workload_splitter.py
contextvault/schemas/: __init__.py  context.py  permissions.py  responses.py
contextvault/services/: __init__.py  command_interpreter.py  context_retrieval.py  conversation_learning.py  debug.py  embedding.py  feedback.py  mem0_service.py  memory_maintenance.py  model_manager.py  permissions.py  semantic_search.py  templates.py  token_counter.py  troubleshooting.py  (+2 more)
docs/: EXTENDED_THINKING_EXPLANATION.md  EXTENDED_THINKING_STATUS.md  INDEX.md  MCP_GOOGLE_CALENDAR_SETUP.md  MCP_INTEGRATION_SUMMARY.md  PHASE_1_STATUS.md
scripts/: bulletproof_demo.py  bulletproof_test.py  compelling_demo.py  demo_cognitive_system.py  demo_side_by_side.py  final_demo.py  import_export.py  init_db.py  install.sh  mcp_calendar_demo.py  migrate_add_embeddings.py  ollama_proxy.py  quick_test.py  start_dashboard.py  test_core_value.py  test_mcp_integration.py  test_templates.py  validate_effectiveness.py  validate_system.py
test_chroma/: chroma.sqlite3
tests/: __init__.py  test_api.py  test_cognitive_workspace.py  test_context_effectiveness.py  test_document_ingestion.py  test_integrations.py  test_thinking_system.py  test_vault.py
(+32 files in other folders)
